--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@ Bezanyi*
 TurtleGraphicsCode/Rules/*.cs
 *Ignored*
 /packages/Igor.Configuration*
+/packages/Igor.Controls*
+/packages/Igor.Models*
+/packages/Igor.Localization*
+/packages/Microsoft.CSharp*
