--- a/TurtleGraphics/packages.config
+++ b/TurtleGraphics/packages.config
@@ -2,6 +2,10 @@
 <packages>
   <package id="Flee" version="1.2.2" targetFramework="net472" />
   <package id="Igor.Configuration" version="1.0.0" targetFramework="net472" />
+  <package id="Igor.Controls" version="1.0.6" targetFramework="net472" />
+  <package id="Igor.Localization" version="1.0.0" targetFramework="net472" />
+  <package id="Igor.Models" version="1.0.1" targetFramework="net472" />
+  <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net472" />
   <package id="System.ComponentModel" version="4.3.0" targetFramework="net472" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net472" />
   <package id="System.Reflection.Emit" version="4.6.0" targetFramework="net472" />
