Cleanup 1/many - added ForEach Linq extension - for loop dialog now auto-selects everything inside - added NotifyAspect and AspectInjector dependency - simplified ViewModels by adding the NotifyAspect annotation - updated almost all Nuget package references

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ TurtleGraphicsCode/Rules/*.cs
 /packages/Igor.Models*
 /packages/Igor.Localization*
 /packages/Microsoft.CSharp*
+/packages/NETStandard*
