--- a/TurtleGraphicsCode/TurtleGraphicsCode.csproj
+++ b/TurtleGraphicsCode/TurtleGraphicsCode.csproj
@@ -33,14 +33,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Igor.Controls, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Igor.Controls.1.0.6\lib\Igor.Controls.dll</HintPath>
+    <Reference Include="Igor.Controls, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\packages\Igor.Controls.1.0.9\lib\Igor.Controls.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="Igor.Localization, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Igor.Localization.1.0.0\lib\netstandard2.0\Igor.Localization.dll</HintPath>
+    <Reference Include="Igor.Localization, Version=1.3.3.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\packages\Igor.Localization.1.3.3\lib\netstandard2.0\Igor.Localization.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="Igor.Models, Version=1.0.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Igor.Models.1.0.1\lib\netstandard2.0\Igor.Models.dll</HintPath>
+    <Reference Include="Igor.Models, Version=1.0.3.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\packages\Igor.Models.1.0.3\lib\netstandard2.0\Igor.Models.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
