--- a/TurtleGraphics/TurtleGraphics.csproj
+++ b/TurtleGraphics/TurtleGraphics.csproj
@@ -240,6 +240,8 @@
     <Compile Include="Language\Definition\FunctionDefinition.cs" />
     <Compile Include="Language\Definition\Parameter.cs" />
     <Compile Include="Language\FunctionCall.cs" />
+    <Compile Include="Language\Keywords\ForLoop.cs" />
+    <Compile Include="Language\ILanguageElement.cs" />
     <Compile Include="Language\Logic\AssignmentInfo.cs" />
     <Compile Include="Language\Logic\Condition.cs" />
     <Compile Include="Language\Logic\Operator.cs" />
